2007-12-16 rec2csv saves doubles without losing precision. Also, it
           does not close filehandles passed in open. - JDH,ADS

2007-12-13 Moved rec2gtk to matplotlib.toolkits.gtktools and rec2excel
           to matplotlib.toolkits.exceltools - JDH

2007-12-12 Support alpha-blended text in the Agg and Svg backends -
           MGD

2007-12-10 Fix SVG text rendering bug. - MGD

2007-12-10 Increase accuracy of circle and ellipse drawing by using an
           8-piece bezier approximation, rather than a 4-piece one.
           Fix PDF, SVG and Cairo backends so they can draw paths
           (meaning ellipses as well). - MGD

2007-12-07 Issue a warning when drawing an image on a non-linear axis. - MGD

2007-12-06 let widgets.Cursor initialize to the lower x and y bounds
           rather than 0,0, which can cause havoc for dates and other
           transforms - DSD

2007-12-06 updated references to mpl data directories for py2exe - DSD

2007-12-06 fixed a bug in rcsetup, see bug 1845057 - DSD

2007-12-05 Fix how fonts are cached to avoid loading the same one multiple times.
           (This was a regression since 0.90 caused by the refactoring of
           font_manager.py) - MGD

2007-12-05 Support arbitrary rotation of usetex text in Agg backend. - MGD

2007-12-04 Support '|' as a character in mathtext - MGD

===============================================================
2007-11-27 Released 0.91.1 at revision 4517

===============================================================
2007-11-27 Released 0.91.0 at revision 4478

2007-11-13 All backends now support writing to a file-like object, not
	   just a regular file.  savefig() can be passed a file-like
	   object in place of a file path. - MGD

2007-11-13 Improved the default backend selection at build time:
           SVG -> Agg -> TkAgg -> WXAgg -> GTK -> GTKAgg. The last usable
           backend in this progression will be chosen in the default