@@ -4,5 +4,8 @@ if use_maskedarray:
     from maskedarray import *
     print "using maskedarray"
 else:
-    from numpy.core.ma import *
+    try:
+        from numpy.ma import *        # numpy 1.05 and later
+    except ImportError:
+        from numpy.core.ma import *   # earlier
     #print "using ma"
